# 2566-2-CG-Assignment3

./: Assignment3_65050581_65050777.cpp  CMakeLists.txt  README.md  main.cpp
Libs/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.h  Window.cpp  Window.h
Models/: anime-school.mtl
Shaders/: shader.frag
